# conversion-engine

./: .env.example  README.md  baseline.md  evidence_graph.json  logger.py  main.py  memo.md  method.md  pyproject.toml  requirements.txt  run_batch.py  run_prospect.py  verify_run.py
agent/: calendar_handler.py  channel_policy.py  email_handler.py  hubspot_handler.py  hubspot_setup.py  sms_handler.py
enrichment/: competitor_gap_brief.py  job_post_scraper.py  signal_brief.py
eval/: ablation_results.json  benchmark_harness.py  generate_baseline_md.py  partition.py  run_eval.py  score_log.json  trace_log.jsonl
logs/: job_post_snapshots.jsonl  prospect_runs.jsonl  score_log.json  trace_log.jsonl
probes/: failure_taxonomy.md  probe_library.md  target_failure_mode.md
